# RustCalc

./: .gitignore  Cargo.toml  README.md  STATE.md  build.rs  com.Rafpren.RustCalc.desktop  com.Rafpren.RustCalc.yml  rustcalc.desktop
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: engine.rs  gui.rs  main.rs
