[package]
name = "rustcalc"
version = "1.2.2"
edition = "2024"
license = "GPL-3.0-only"
description = "Une calculatrice élégante développée en Rust avec egui."
homepage = "https://github.com/Rafpren/RustCalc"
repository = "https://github.com/Rafpren/RustCalc"
authors = ["Rafpren"]

[dependencies]
eframe = "0.29"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.generate-rpm]
package = "rustcalc"
assets = [
    { source = "target/release/rustcalc", dest = "/usr/bin/rustcalc", mode = "755" },
    { source = "rustcalc.desktop", dest = "/usr/share/applications/rustcalc.desktop", mode = "644" }
]

[package.metadata.generate-rpm.cargo]
buildflags = ["--release"]

[package.metadata.generate-rpm.targets]
rustcalc = { path = "/usr/bin/rustcalc" }

[package.metadata.deb]
maintainer = "Rafpren <raf.prencipe@pm.me>"
assets = [
    ["target/release/rustcalc", "usr/bin/rustcalc", "755"],
    ["rustcalc.desktop", "usr/share/applications/rustcalc.desktop", "644"],
]
depends = "$auto, libc6, libssl3"
