[package]
name = "rustcalc"
version = "1.2.12"
edition = "2024"
license = "GPL-3.0-only"
description = "Une calculatrice élégante développée en Rust avec egui."
homepage = "https://github.com/Rafpren/RustCalc"
repository = "https://github.com/Rafpren/RustCalc"
authors = ["Rafpren"]

[dependencies]
eframe = "0.34.1"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.generate-rpm]
package = "rustcalc"
assets = [
    { source = "target/release/rustcalc", dest = "/usr/bin/rustcalc", mode = "755" },
    { source = "rustcalc.desktop", dest = "/usr/share/applications/rustcalc.desktop", mode = "644" },
    # Copie l'icône dans le dossier système
    { source = "icons/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/rustcalc.png", mode = "644" }
]

[package.metadata.generate-rpm.cargo]
buildflags = ["--release"]

[package.metadata.generate-rpm.targets]
rustcalc = { path = "/usr/bin/rustcalc" }

[package.metadata.deb]
maintainer = "Rafpren <268448116+Rafpren@users.noreply.github.com>"
assets = [
    ["target/release/rustcalc", "usr/bin/rustcalc", "755"],
    ["rustcalc.desktop", "usr/share/applications/rustcalc.desktop", "644"],
    # Copie l'icône (le chemin cible doit être relatif)
    ["icons/icon.png", "usr/share/icons/hicolor/512x512/apps/rustcalc.png", "644"]
]
depends = "$auto, libc6, libssl3"